Closed Bug 894234 Opened 12 years ago Closed 12 years ago

"Assertion failure: !mIsOffline" [@ mozilla::dom::AudioContext::Unmute]

Categories

(Core :: Web Audio, defect)

defect
Not set
critical

Tracking

()

VERIFIED FIXED
mozilla25
Tracking Status
firefox24 + verified
firefox25 + verified

People

(Reporter: jruderman, Assigned: adw)

References

Details

(Keywords: assertion, testcase, Whiteboard: [blocking-webaudio+])

Attachments

(3 files)

Attached file testcase
Assertion failure: !mIsOffline, at content/media/webaudio/AudioContext.cpp:549 Easier to reproduce on Windows, but happens on Mac too.
Attached file stack
Attachment #776589 - Flags: review?(ehsan)
Attachment #776589 - Flags: review?(ehsan) → review+
Assignee: nobody → adw
Whiteboard: [blocking-webaudio+]
Blocks: 879111
Keywords: checkin-needed
Drew, can you please ask for Aurora approval once this lands?
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla25
Comment on attachment 776589 [details] [diff] [review] guard against audioContext->IsOffline() [Approval Request Comment] Forwarding Ehsan's request for Aurora approval in comment 3. Bug caused by (feature/regressing bug #): bug 879111 User impact if declined: minimal Testing completed (on m-c, etc.): no automated testing Risk to taking this patch (and alternatives if risky): very very low String or IDL/UUID changes made by this patch: none
Attachment #776589 - Flags: approval-mozilla-aurora?
Attachment #776589 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
Mozilla/5.0 (Macintosh; Intel Mac OS X 10.8; rv:24.0) Gecko/20100101 Firefox/24.0 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:24.0) Gecko/20100101 Firefox/24.0 Mozilla/5.0 (X11; Linux i686; rv:24.0) Gecko/20100101 Firefox/24.0 Verified as fixed on Windows 7 x64, Mac OS X 10.8, Ubuntu 12.04 x32 with Firefox 24 beta 8 (buildID: 20130902131354) and latest Nightly (buildID: 20130902030220).
Mozilla/5.0 (Macintosh; Intel Mac OS X 10.8; rv:25.0) Gecko/20100101 Firefox/25.0 Mozilla/5.0 (X11; Linux i686; rv:25.0) Gecko/20100101 Firefox/25.0 Mozilla/5.0 (Windows NT 6.1; WOW64; rv:25.0) Gecko/20100101 Firefox/25.0 Verified as fixed with Firefox 25 beta 4 (Build ID: 20131001024718) on Windows 7 x64, Mac OS X 10.8 and Ubuntu.
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: