Bug 894234 - Guard against audioContext->IsOffline(). r=ehsan